--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,48 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+/*
+  Переменные для вашего проекта
+  и их переопределение под различные устройства
+*/
+
+:root {
+  /* отступ от краев */
+  --indentation: 20px;
+
+  /* альтернативный щрифт - в дальнейшем его переопределяем */
+  --mainfont: 'IBM Plex mono', sans-serif;
+
+  /* цвет меню */
+  --menu-color: #ff0070;
+
+  /* цвет заголовков */
+  --title-color: #ff0070;
+
+  /* цвет меню для состояния hover */
+  --menu-color-RGB-transperent: rgb(255 0 112 / 0.4);
+
+  /* цвет шрифта для акцентных элементов */
+  --accent-color: #ff0070;
+
+  /* цвет шрифта для заголовков 1 уровня */
+  --title_big-color: #db00ff;
+
+  /* цвет шрифта для заголовков 2 уровня */
+  --subtitle-colore: #ff0070;
+
+  /* цвет шрифта для заголовков 2 уровня с декором */
+  --subtitle-color-decor: #000028;
+
+  /* цвет шрифта для заголовков 2 и 3 уровня */
+  --mainfont-color: #f1b2ce;
+
+  /* размер шрифта заголовка для планшета или декстопа */
+  --mainfont-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+}
+
+@media screen and (max-width: 575px) {
+
+  :root {
+    --mainfont-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    --indentation: 10px;
+  }
+}
