--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,16 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+:root.theme-dark {
+  --main-color: #000;
+  --accent-color: #00cc14;
+  --title-font-weight: 785px;
+  --main-font-weight: 465px;
+}
+
+:root.theme-light {
+  --main-color: #fff;
+  --accent-color: #000;
+  --title-font-weight: 700px;
+  --main-font-weight: 400px;
+}
