--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,16 +4,31 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
 :root.theme-dark {
   --main-color: #000;
   --accent-color: #00cc14;
-  --title-font-weight: 785px;
-  --main-font-weight: 465px;
+  --title-font-weight: 785;
+  --main-font-weight: 465;
+  --page-gradient: repeating-linear-gradient(
+      90deg,
+      #000 0 2px,
+      rgb(211 211 211 /0) 2px 4px
+    ),
+    repeating-linear-gradient(180deg, #000 0 2px, rgb(211 211 211 /0) 2px 4px),
+    linear-gradient(#007f0c, #004306);
 }
 
 :root.theme-light {
   --main-color: #fff;
   --accent-color: #000;
-  --title-font-weight: 700px;
-  --main-font-weight: 400px;
+  --title-font-weight: 700;
+  --main-font-weight: 400;
+  --page-gradient: repeating-linear-gradient(
+      90deg,
+      #d3d3d3 0 2px,
+      rgb(211 211 211 /0) 2px 4px
+    ),
+    repeating-linear-gradient(180deg, #000 0 2px, rgb(211 211 211 /0) 2px 4px),
+    linear-gradient(#e7e7e7 0.01%, #1a1a1a);
 }
