--- a/styles/themes.css
+++ b/styles/themes.css
@@ -9,6 +9,7 @@
   --main-color: #000;
   --accent-color: #00cc14;
   --decor-shadow-color: #000;
+  --buttom-like-text-color: #00cc14;
   --title-font-weight: 785;
   --main-font-weight: 465;
   --page-gradient: repeating-linear-gradient(
@@ -24,6 +25,7 @@
   --main-color: #fff;
   --accent-color: #000;
   --decor-shadow-color: #fff;
+  --buttom-like-text-color: #fff;
   --title-font-weight: 700;
   --main-font-weight: 400;
   --page-gradient: repeating-linear-gradient(
