--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -9,10 +9,10 @@
 
 @font-face {
   font-display: swap;
-  font-family: 'Inter';
+  font-family: Inter;
   src:
     local('Inter'),
-    url('../fonts/Inter-Variable.woff2') format('woff2 supports variations'),
-    url('../fonts/Inter-Variable.woff2') format('woff2-variations');
+    url(../fonts/Inter-Variable.woff2) format('woff2 supports variations'),
+    url(../fonts/Inter-Variable.woff2) format('woff2-variations');
   font-weight: 400px 785px;
 }
