--- a/styles/variables.css
+++ b/styles/variables.css
@@ -19,7 +19,7 @@
   --buttom-like-text-color: #fff;
 
   --like-icon-contour: var(--accent-color);
-  --like-icon-sparks: #ff0000;
+  --like-icon-sparks: #f00;
   --like-icon-main-body: var(--accent-color);
   --like-icon-core: var(--accent-color);
 
