--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -14,5 +14,5 @@
     local('Inter'),
     url(../fonts/Inter-Variable.woff2) format('woff2 supports variations'),
     url(../fonts/Inter-Variable.woff2) format('woff2-variations');
-  font-weight: 400px 785px;
+  font-weight: 400 785;
 }
