--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,9 @@
   background-size: cover;
   min-inline-size: 320px;
   min-block-size: 100dvb;
-  font-variation-settings: 'wdth' var(--main-font-weight, 400);
+
+  font-variation-settings: 'wght' var(--main-font-weight)
+    var(--title-font-weight);
 }
 
 .page__section {
@@ -61,7 +63,7 @@
 .title-big {
   margin-block-end: 20px;
   font-weight: 400;
-  font-size: var(--title-size-big, 65px);
+  font-size: var(--title-size-big);
   font-style: normal;
   line-height: normal;
   text-transform: uppercase;
@@ -69,7 +71,7 @@
 
 .title-med {
   font-weight: 400;
-  font-size: var(--title-size-med, 65px);
+  font-size: var(--title-size-med);
   font-style: normal;
   line-height: normal;
   text-transform: uppercase;
@@ -87,7 +89,7 @@
   justify-content: center;
   align-items: center;
   border: none;
-  outline: 2px solid var(--accent-color, #000);
+  outline: 2px solid var(--accent-color);
   background: var(--main-color);
   cursor: pointer;
 }
@@ -132,7 +134,7 @@
   width: 100%;
   height: 2px;
   opacity: 0.6;
-  background-color: var(--accent-color, #000);
+  background-color: var(--accent-color);
   transform: scaleX(0);
   transform-origin: left;
 }
@@ -158,8 +160,8 @@
 
 .card__description-image {
   position: relative;
-  border-top: 2px solid var(--accent-color, #000);
-  border-bottom: 2px solid var(--accent-color, #000);
+  border-top: 2px solid var(--accent-color);
+  border-bottom: 2px solid var(--accent-color);
 }
 
 .image__decor {
@@ -173,21 +175,22 @@
   font-style: normal;
   line-height: normal;
   text-shadow:
-    -1px 0 var(--decor-shadow-color, #fff),
-    0 1px var(--decor-shadow-color, #fff),
-    1px 0 var(--decor-shadow-color, #fff),
-    0 -1px var(--decor-shadow-color, #fff);
+    -1px 0 var(--decor-shadow-color),
+    0 1px var(--decor-shadow-color),
+    1px 0 var(--decor-shadow-color),
+    0 -1px var(--decor-shadow-color);
   mix-blend-mode: hard-light;
 }
 
 @supports (
-  (text-stroke: 1px var(--decor-shadow-color, #fff)) or
-    (-webkit-text-stroke: 1px var(--decor-shadow-color, #fff))
+  (text-stroke: 1px var(--decor-shadow-color)) or
+    (-webkit-text-stroke: 1px var(--decor-shadow-color))
 ) {
+
   .image__decor {
     text-shadow: none;
-    -webkit-text-stroke: 1px var(--decor-shadow-color, #fff);
-    text-stroke: 1px var(--decor-shadow-color, #fff);
+    -webkit-text-stroke: 1px var(--decor-shadow-color);
+    text-stroke: 1px var(--decor-shadow-color);
   }
 }
 
@@ -239,7 +242,7 @@
   padding-inline: 10px;
   padding-block: 5px;
   font-family: var(--main-font, sans-serif);
-  font-weight: var(--title-font-weight, 700);
+  font-weight: var(--title-font-weight);
   font-size: 18px;
   font-style: normal;
   line-height: normal;
@@ -249,7 +252,7 @@
   margin-inline: 25px;
   padding-block-start: 25px;
   font-family: var(--main-font, sans-serif);
-  font-weight: var(--main-font-weight, 400);
+  font-weight: var(--main-font-weight);
   font-size: 18px;
   font-style: normal;
   line-height: 21px; /* 116.667% */
@@ -276,7 +279,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  background-color: var(--accent-color, #000);
+  background-color: var(--accent-color);
   transform: scaleX(0);
   transform-origin: left;
 }
@@ -286,7 +289,7 @@
 }
 
 .button:focus-visible {
-  box-shadow: 4px 4px 0 0 var(--accent-color, #000);
+  box-shadow: 4px 4px 0 0 var(--accent-color);
   transition: box-shadow 0.3s;
 }
 
@@ -366,7 +369,7 @@
   border: none;
   padding-inline: 20px;
   padding-block: 16px;
-  background: var(--main-color, #fff);
+  background: var(--main-color);
 }
 
 .button__text {
@@ -410,8 +413,8 @@
 }
 
 .modal-window {
-  background: var(--main-color, #fff);
-  border: 2px solid var(--accent-color, #000);
+  background: var(--main-color);
+  border: 2px solid var(--accent-color);
   color: currentColor;
   font-family: var(--decor-font, sans-serif);
   text-transform: uppercase;
@@ -453,6 +456,7 @@
 }
 
 @media (width <= 376px) {
+
   :root {
     --section_with: 100v;
   }
