--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: 'Press Start 2P';
-  src: url(../fonts/PressStart2P-Regular.woff) format('woff');
+  src: url(./PressStart2P-Regular.woff) format('woff');
   font-weight: normal;
   font-display: swap;
 }
@@ -12,7 +12,7 @@
   font-family: Inter;
   src:
     local('Inter'),
-    url(../fonts/Inter-Variable.woff2) format('woff2 supports variations'),
-    url(../fonts/Inter-Variable.woff2) format('woff2-variations');
+    url(./Inter-Variable.woff2) format('woff2 supports variations'),
+    url(./Inter-Variable.woff2) format('woff2-variations');
   font-weight: 400 785;
 }
