--- a/styles/animations.css
+++ b/styles/animations.css
@@ -14,7 +14,6 @@
 */
 
 @keyframes decor-animation {
-
   0% {
     transform: translateX(0);
   }
@@ -23,17 +22,12 @@
     transform: translateX(2px);
   }
 
-  66% {
-    transform: translateX(-4px);
-  }
-
   100% {
-    transform: translateX(0);
+    transform: translateX(-4px);
   }
 }
 
 @keyframes heart-scale {
-
   0% {
     transform: scale(1);
   }
@@ -44,7 +38,6 @@
 }
 
 @keyframes sparks-like {
-
   0% {
     opacity: 0;
   }
@@ -56,4 +49,72 @@
   100% {
     opacity: 1;
   }
+}
+
+.button:hover:before {
+  transform: scaleX(1);
+}
+
+.theme-menu__button:focus-visible::after {
+  transform: scaleX(1);
+}
+
+.contour {
+  fill: var(--accent-color);
+  transition: fill 0.1s linear;
+}
+
+.core {
+  fill: transparent;
+  transition: fill 0.3s linear;
+  transition-delay: 0.03s;
+}
+
+.main-body {
+  fill: transparent;
+  transition: fill 0.3s linear;
+  transition-delay: 0s;
+}
+
+.like-icon:hover .core {
+  fill: var(--like-icon-core);
+  transition-delay: 0s;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--like-icon-core);
+  transition-delay: 0.05s;
+}
+
+.like-icon:active .core {
+  fill: #f00;
+  transition-delay: 0s;
+}
+
+.like-icon:active .main-body {
+  fill: #f00;
+  transition-delay: 0.05s;
+}
+
+.like-icon.is-liked {
+  animation: heart-scale 0.3s 0.1s ease-in alternate;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks-like 0.3s ease-in 0.3s 1 alternate;
+}
+
+.like-icon.is-liked .contour {
+  fill: #f00;
+  transition-delay: 0.06s;
+}
+
+.like-icon.is-liked .core {
+  fill: #f00;
+  transition-delay: 0s;
+}
+
+.like-icon.is-liked .main-body {
+  fill: #f00;
+  transition-delay: 0.3s;
 }
