--- a/styles/style.css
+++ b/styles/style.css
@@ -19,13 +19,13 @@
   flex-direction: column;
   align-items: center;
   color: var(--accent-color, #000);
-  background-image: var(--page-gradient);
+  background-image: var(--page-gradient, #fff);
   background-size: cover;
   min-inline-size: 320px;
   min-block-size: 100dvb;
-
   font-variation-settings: 'wght' var(--main-font-weight)
     var(--title-font-weight);
+  background-attachment: fixed;
 }
 
 .page__section {
@@ -41,7 +41,7 @@
 .header {
   justify-content: flex-end;
   align-items: center;
-  height: 368px;
+  min-height: 368px;
   margin-block: 100px;
   font-family: var(--decor-font, sans-serif);
 }
@@ -92,6 +92,12 @@
   outline: 2px solid var(--accent-color);
   background: var(--main-color);
   cursor: pointer;
+  transition: box-shadow 0.3s;
+}
+
+.theme-menu__item {
+  position: relative;
+  margin-inline-start: 18px;
 }
 
 .theme-menu__button {
@@ -103,18 +109,13 @@
   text-transform: uppercase;
   background: transparent;
   cursor: pointer;
-}
-
-.theme-menu__button:hover {
-  opacity: 0.6;
   transition:
     opacity 0.3s,
     ease;
 }
 
-.theme-menu__item {
-  position: relative;
-  margin-inline-start: 18px;
+.theme-menu__button:hover {
+  opacity: 0.6;
 }
 
 .theme-menu__button:disabled {
@@ -137,19 +138,16 @@
   background-color: var(--accent-color);
   transform: scaleX(0);
   transform-origin: left;
-}
-
-.theme-menu__button:focus-visible::after {
   transition: transform 0.3s;
-  transform: scaleX(1);
 }
 
 .theme-menu__item:has(.theme-menu__button:disabled)::before {
   content: '▶';
   position: absolute;
+  top: 1px;
   left: -14px;
   opacity: 0.6;
-  animation: decor-animation 0.5s infinite ease-in-out running both;
+  animation: decor-animation 0.5s infinite ease-in-out alternate;
 }
 
 .card {
@@ -186,7 +184,6 @@
   (text-stroke: 1px var(--decor-shadow-color)) or
     (-webkit-text-stroke: 1px var(--decor-shadow-color))
 ) {
-
   .image__decor {
     text-shadow: none;
     -webkit-text-stroke: 1px var(--decor-shadow-color);
@@ -197,38 +194,40 @@
 .card__image {
   display: block;
   width: 100%;
-  object-fit: contain;
+  object-fit: cover;
+  object-position: center;
+  max-height: 696px;
 }
 
-.card:nth-of-type(1) .card__image {
+.filter-complex {
   filter: invert(1) brightness(100%) saturate(60%) hue-rotate(90deg);
 }
 
-.card:nth-of-type(2) .card__image {
+.filter-sepia {
   filter: sepia(1);
 }
 
-.card:nth-of-type(3) .card__image {
+.filter-contrast {
   filter: contrast(100);
 }
 
-.card:nth-of-type(4) .card__image {
+.filter-invert {
   filter: invert(1);
 }
 
-.card:nth-of-type(5) .card__image {
+.filter-hue__rotate {
   filter: hue-rotate(20deg);
 }
 
-.card:nth-of-type(6) .card__image {
+.filter-saturate {
   filter: saturate(30%);
 }
 
-.card:nth-of-type(7) .card__image {
+.filter-blur {
   filter: blur(0.3rem);
 }
 
-.card:nth-of-type(8) .card__image {
+.filter-grayscale {
   filter: grayscale(0.8);
 }
 
@@ -269,7 +268,7 @@
 
 .card__like-button {
   width: 126px;
-  height: 38px;
+  height: 35px;
   padding: 0;
 }
 
@@ -282,6 +281,7 @@
   background-color: var(--accent-color);
   transform: scaleX(0);
   transform-origin: left;
+  transition: transform 0.5s ease-in-out;
 }
 
 .button:focus {
@@ -290,12 +290,6 @@
 
 .button:focus-visible {
   box-shadow: 4px 4px 0 0 var(--accent-color);
-  transition: box-shadow 0.3s;
-}
-
-.button:hover:before {
-  transition: transform 0.5s ease-in-out;
-  transform: scaleX(1);
 }
 
 .like-icon {
@@ -304,62 +298,6 @@
 
 .sparks {
   opacity: 0;
-}
-
-.contour {
-  fill: var(--accent-color);
-  transition: fill 0.1s linear;
-}
-
-.core {
-  fill: transparent;
-  transition: fill 0.3s linear;
-  transition-delay: 0.03s;
-}
-
-.main-body {
-  fill: transparent;
-  transition: fill 0.3s linear;
-  transition-delay: 0s;
-}
-
-.like-icon:hover .core {
-  fill: var(--like-icon-core);
-}
-
-.like-icon:hover .main-body {
-  fill: var(--like-icon-core);
-  transition-delay: 0.05s;
-}
-
-.like-icon:active .core {
-  fill: #f00;
-}
-
-.like-icon:active .main-body {
-  fill: #f00;
-  transition-delay: 0.05s;
-}
-
-.like-icon.is-liked {
-  animation: heart-scale 0.3s 0.1s ease-in alternate;
-}
-
-.like-icon.is-liked .sparks {
-  animation: sparks-like 0.3s ease-in 0.3s 1 alternate;
-}
-
-.like-icon.is-liked .contour {
-  fill: #f00;
-  transition-delay: 0.06s;
-}
-
-.like-icon.is-liked .core {
-  fill: #f00;
-}
-
-.like-icon.is-liked .main-body {
-  fill: #f00;
 }
 
 .save-button {
@@ -391,8 +329,12 @@
   width: auto;
   padding: 0;
   height: 35px;
-  transition: color 0.3s ease;
+  transition: outline 0.3s ease;
   cursor: pointer;
+}
+
+.card__icon-button:focus {
+  outline: 2px solid transparent;
 }
 
 .card__icon-button:focus-visible {
@@ -456,7 +398,6 @@
 }
 
 @media (width <= 376px) {
-
   :root {
     --section_with: 100v;
   }
@@ -467,7 +408,7 @@
   }
 
   .header {
-    height: 323px;
+    min-height: 323px;
     margin-block: 102px;
   }
 
