--- a/styles/themes.css
+++ b/styles/themes.css
@@ -13,11 +13,18 @@
   --title-font-weight: 785;
   --main-font-weight: 465;
   --page-gradient: repeating-linear-gradient(
-      90deg,
-      #000 0 2px,
-      rgb(211 211 211 /0) 2px 4px
+      #000,
+      #000 2px,
+      transparent 2px,
+      transparent 4px
     ),
-    repeating-linear-gradient(180deg, #000 0 2px, rgb(211 211 211 /0) 2px 4px),
+    repeating-linear-gradient(
+      90deg,
+      #000,
+      #000 2px,
+      transparent 2px,
+      transparent 4px
+    ),
     linear-gradient(#007f0c, #004306);
 }
 
@@ -29,10 +36,67 @@
   --title-font-weight: 700;
   --main-font-weight: 400;
   --page-gradient: repeating-linear-gradient(
-      90deg,
-      #d3d3d3 0 2px,
-      rgb(211 211 211 /0) 2px 4px
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
     ),
-    repeating-linear-gradient(180deg, #000 0 2px, rgb(211 211 211 /0) 2px 4px),
+    repeating-linear-gradient(
+      90deg,
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
+    ),
     linear-gradient(#e7e7e7 0.01%, #1a1a1a);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --main-color: #fff;
+    --accent-color: #000;
+    --decor-shadow-color: #fff;
+    --buttom-like-text-color: #fff;
+    --title-font-weight: 700;
+    --main-font-weight: 400;
+    --page-gradient: repeating-linear-gradient(
+        #d3d3d3,
+        #d3d3d3 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      repeating-linear-gradient(
+        90deg,
+        #d3d3d3,
+        #d3d3d3 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      linear-gradient(#e7e7e7, #1a1a1a);
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --main-color: #000;
+    --accent-color: #00cc14;
+    --decor-shadow-color: #000;
+    --buttom-like-text-color: #00cc14;
+    --title-font-weight: 785;
+    --main-font-weight: 465;
+    --page-gradient: repeating-linear-gradient(
+        #000,
+        #000 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      repeating-linear-gradient(
+        90deg,
+        #000,
+        #000 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      linear-gradient(#007f0c, #004306);
+  }
 }
